Fix: make scroll indicator edges contrast better

--- a/static/styles/jsdoc-default.css
+++ b/static/styles/jsdoc-default.css
@@ -725,7 +725,7 @@ tr > th:last-child {
         top: 0;
         bottom: 0;
         left: 0;
-        border-left: 1px dashed #ddd;
+        border-left: 1px dashed #aaa;
     }
     
     .params .subsection-content:after,
@@ -736,7 +736,7 @@ tr > th:last-child {
         top: 0;
         bottom: 0;
         right: 0;
-        border-right: 1px dashed #ddd;
+        border-right: 1px dashed #aaa;
     }
     
     .params .subsection-content table,
